updated methods in UserHistoryService interface, added fields for UserPointsHistoryResponseDTO