@@ -2,6 +2,7 @@ package com.vzap.trytons.service;
 
 import com.vzap.trytons.dto.PlayerPointsHistoryResponseDTO;
 import com.vzap.trytons.dto.UserPointsHistoryResponseDTO;
+import com.vzap.trytons.dto.WeeklyPerformanceResponseDTO;
 import jakarta.enterprise.context.ApplicationScoped;
 
 import java.util.Collections;
@@ -12,12 +13,12 @@ import java.util.UUID;
 public class UserHistoryServiceImpl implements UserHistoryService {
 
     @Override
-    public UserPointsHistoryResponseDTO getUserPointsHistory(UUID actorUserId) {
-        return new UserPointsHistoryResponseDTO();
+    public UserPointsHistoryResponseDTO getUserPointsHistory(String actorUserId) {
+        return null;
     }
 
     @Override
-    public List<PlayerPointsHistoryResponseDTO> getPlayerPointsHistory(UUID actorUserId, UUID playerId) {
-        return Collections.emptyList();
+    public List<WeeklyPerformanceResponseDTO> getWeeklyPerformance(String actorUserId) {
+        return List.of();
     }
 }
